--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.3",
-    "openai": "^4.65.0"
+    "mongoose": "^8.7.0",
+    "node": "^22.9.0",
+    "openai": "^4.67.1"
   }
 }
