--- a/package.json
+++ b/package.json
@@ -1,20 +1,55 @@
 {
-  "name": "salesboy",
-  "version": "0.0.1",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "type": "module",
-  "author": "ChinuBabu and Jhaklu",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "mongoose": "^8.7.0",
-    "node": "^22.9.0",
-    "openai": "^4.67.1"
+    "name": "salesboy",
+    "version": "0.0.1",
+    "main": "backend/index.js",
+    "scripts": {
+      "start:backend": "node backend/index.js", 
+      "start:frontend": "react-scripts start",  
+      "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"", 
+      "build:frontend": "react-scripts build",           
+      "test:frontend": "react-scripts test",   
+      "test:backend": "echo \"Error: no test specified\" && exit 1",          
+      "eject:frontend": "react-scripts eject"
+    },
+    "dependencies": {
+      "axios": "^1.7.7",
+      "concurrently": "^9.0.1",
+      "dotenv": "^16.4.5",
+      "express": "^4.21.0",
+      "mongoose": "^8.7.0",
+      "openai": "^4.67.1",
+      "react": "^18.3.1",
+      "react-dom": "^18.3.1",
+      "react-scripts": "5.0.1",
+      "web-vitals": "^2.1.4"
+    },
+    "devDependencies": {
+      "@testing-library/jest-dom": "^5.17.0",
+      "@testing-library/react": "^13.4.0",
+      "@testing-library/user-event": "^13.5.0",
+      "node": "^22.9.0"
+    },
+    "eslintConfig": {
+      "extends": [
+        "react-app",
+        "react-app/jest"
+      ]
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    },
+    "type": "module",
+    "author": "ChinuBabu and Jhaklu",
+    "license": "ISC",
+    "description": ""
   }
-}
+  
